Imagem da parte de Formação

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ section
 	margin-top: 100px;
 	color: #ffffff;
 	height: 280px;
-	background: url('../img/emile-perron-190221-min.jpg')no-repeat;
+	background: url('../img/desktop.jpg')no-repeat;
 	background-position: 50% 50%;
 	background-size: cover;
 	background-attachment: fixed;
