--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ padding-top: 45px;
 	padding-top: 80px;
 }
 .article-box{
+	box-shadow: 8px 8px 16px rgba(25,6,11,.5);
 	background-color: #fff;
     float: left;
     margin-top: 7%;
@@ -294,4 +295,68 @@ padding-top: 45px;
 .name-skill{
 	margin-top:10px;
 
+}
+
+.trabalhos{
+	padding:50px 130px 50px 130px;
+
+  
+}
+.github{
+	box-shadow: -1px 6px 12px rgba(25,6,11,.5);
+	border: 1px solid #ffffff;
+	height: 230px;
+	background-color: #ffffff;
+	text-align: center;
+	padding:35px 35px 10px 35px;;
+    display: inline-block;
+	width:29%;
+	margin: 2%;
+}
+
+hr{
+ border-color:#cecece;
+}
+
+.language{
+	margin-bottom: 55px;
+}
+
+@media (min-width: 0) and (max-width: 767px) {
+    .sobre {
+        padding: 22px 0;
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .img-box {
+        max-width: 100%
+    }
+}
+@media (min-width: 0) and (max-width: 767px) {
+    .img-box {
+        margin-left: 5px;
+        margin-right: 0;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1280px) {
+    .article-box {
+        max-width: 430px;
+    }
+}
+@media (min-width: 0) and (max-width: 991px) {
+    .article-box {
+        margin-top: -75px;
+        max-width: 360px;
+        padding: 17px 0 17px 40px;
+    }
+}
+@media (min-width: 0) and (max-width: 767px) {
+    .article-box {
+        max-width: 90%;
+        margin-top: -65px;
+        padding: 17px 0 17px 40px;
+    }
 }
